	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
08/02
	* Updated Create Arrow to X.4 [Playtester]
	* Gold Lux now makes you autocast Flip Coin on attack [Playtester]
	- also Gunslinger can use Berserk Potion now
	* Changed Scream and Hammerfall's stun duration to 5 seconds. [Skotlex]
	* Converted NJ_HYOUSYOURAKU from jAthena since our version was lacking a time2 [Playtester]
	* Reverted LOD card changes as well [Playtester]
	* Reverted some changes. [MasterOfMuppets]
	* Reduced overrefine bonus of level 4 weapons to 13 [Playtester]
	* Added the new items and fixed selling price of Dark Mask [Playtester]
08/01
	* Changed Solace's and Retribution's skills so they feel like on official servers [Playtester]
	* Fire Pillar's aftercast delay is 1 second now [Playtester]
	* Updated Abyss Lake and Rachel mobs [Playtester]
	* Some minor monster skill changes [Playtester]
	* Made Deluge/volcano/v. gale be castable on top of each other again
	  [Skotlex]
	* Cleaned up some of the db files. [Skotlex]
	* Fixed name of Freya's Shoes [Playtester]
	* Small item update from Haplo [Playtester]
07/31
	* Updated Awakening Potion, Note Headphone and High Quality Sandals [Playtester]
07/30
	* Corrected the defense of puppy band [MasterOfMuppets]
	* Adjusted some drop rates and removed Yoyo's Animal Skin drop [Playtester]
	* Fixed element of Abyss Lake monsters [Playtester]
07/29
	* Memorize cast time now can't be reduced by status changes neither.
	  [Skotlex]
	* Large mob_db update [Playtester]
	- added most of the missing X.4 / 11.1 drops
	- adjusted the drop rates of Odin Temple and Kiel's Mechanical Doll Factory
	- removed beret drop